<resources>
    <string name="app_name">Examen_ListView</string>
    <string name="celulares">Celulares</string>
    <string name="lista">Lista</string>
    <string name="reporte">Reporte</string>

    <string-array name="opciones">
        <item>@string/celulares</item>
        <item>@string/lista</item>
        <item>@string/reporte</item>
    </string-array>
    <string name="registro_celular">Registro de celulares</string>

    <string name="marca">Marca: </string>
    <string name="nokia">Nokia </string>
    <string name="huawei">Huaewi </string>
    <string name="apple">Apple </string>
    <string name="samsung">Samsung </string>
    <string name="color">Color:</string>
    <string name="valor">Precio:</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>

    <string name="rojo">Rojo </string>
    <string name="azul">Azul </string>
    <string name="blanco">Blanco </string>
    <string name="negro">Negro </string>

    <string-array name="marca_celular">
        <item>@string/nokia</item>
        <item>@string/huawei</item>
        <item>@string/apple</item>
        <item>@string/samsung</item>
    </string-array>

    <string-array name="color_celular">
        <item>@string/rojo</item>
        <item>@string/azul</item>
        <item>@string/blanco</item>
        <item>@string/negro</item>
    </string-array>
    <string name="registro_guardado">Registro guardado exitosamente</string>
    <string name="no">No</string>
    <string name="erro1">La caja de texto no puede estar vacia</string>
    <string name="error2">La caja no puede ser 0</string>
    <string name="reporte4">Reporte 4 </string>
    <string name="numero_app">Numero de celular marca apple de color negro :</string>
    <string name="reporte5">Reporte 5</string>
    <string name="precio_promedio">Precio promedio de celulares marca nokia registrados :</string>
    <string name="numero_celulares">Numero de celulares :</string>
    <string name="precio_total">Precio total: </string>
    <string name="error3">Esto es ta mal no puede haver . solo en la caja de texto</string>

</resources>
